server/Syntax/cpp_parser.output
Terminals unused in grammar

   FRIEND
   INLINE
   TEMPLATE
   THROW
   VIRTUAL
   LOWER_THAN_ELSE


State 146 conflicts: 1 shift/reduce
State 402 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'
    5                   | BOOL_LITERAL
    6                   | THIS

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' ')'
   10                   | postfix_expression '(' argument_expression_list ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression PTR_OP IDENTIFIER
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP
   15                   | IDENTIFIER SCOPE_OP IDENTIFIER
   16                   | postfix_expression LEFT_OP primary_expression

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'
   25                 | NEW cast_expression
   26                 | DELETE cast_expression

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression '*' cast_expression
   37                          | multiplicative_expression '/' cast_expression
   38                          | multiplicative_expression '%' cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_OP additive_expression
   44                 | shift_expression RIGHT_OP additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LE_OP shift_expression
   49                      | relational_expression GE_OP shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ_OP relational_expression
   52                    | equality_expression NE_OP relational_expression

   53 and_expression: equality_expression
   54               | and_expression '&' equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression '^' and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression '|' exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression AND_OP inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression OR_OP logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression '?' expression ':' conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: '='
   68                    | MUL_ASSIGN
   69                    | DIV_ASSIGN
   70                    | MOD_ASSIGN
   71                    | ADD_ASSIGN
   72                    | SUB_ASSIGN
   73                    | LEFT_ASSIGN
   74                    | RIGHT_ASSIGN
   75                    | AND_ASSIGN
   76                    | XOR_ASSIGN
   77                    | OR_ASSIGN

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 class_definition: class_head '{' class_body '}'

   82 class_head: CLASS IDENTIFIER
   83           | CLASS IDENTIFIER base_clause

   84 base_clause: ':' access_specifier IDENTIFIER

   85 access_specifier: PUBLIC
   86                 | PRIVATE
   87                 | PROTECTED

   88 class_body: member_list
   89           | /* empty */

   90 member_list: member_declaration
   91            | member_list member_declaration

   92 member_declaration: access_specifier ':'
   93                   | declaration
   94                   | constructor_definition
   95                   | destructor_definition

   96 constructor_definition: IDENTIFIER '(' parameter_list ')' compound_statement
   97                       | IDENTIFIER '(' ')' compound_statement

   98 destructor_definition: '~' IDENTIFIER '(' ')' compound_statement

   99 translation_unit: external_declaration
  100                 | translation_unit external_declaration
  101                 | NAMESPACE IDENTIFIER '{' translation_unit '}'
  102                 | USING NAMESPACE IDENTIFIER ';'
  103                 | '#' IDENTIFIER STRING_LITERAL
  104                 | '#' IDENTIFIER '<' IDENTIFIER '>'

  105 external_declaration: function_definition
  106                     | declaration
  107                     | class_definition

  108 function_definition: declaration_specifiers declarator declaration_list compound_statement
  109                    | declaration_specifiers declarator compound_statement
  110                    | declarator declaration_list compound_statement
  111                    | declarator compound_statement

  112 declaration: declaration_specifiers ';'
  113            | declaration_specifiers init_declarator_list ';'

  114 declaration_specifiers: storage_class_specifier
  115                       | storage_class_specifier declaration_specifiers
  116                       | type_specifier
  117                       | type_specifier declaration_specifiers
  118                       | type_qualifier
  119                       | type_qualifier declaration_specifiers

  120 storage_class_specifier: TYPEDEF
  121                        | EXTERN
  122                        | STATIC
  123                        | AUTO
  124                        | REGISTER

  125 type_specifier: VOID
  126               | CHAR
  127               | SHORT
  128               | INT
  129               | LONG
  130               | FLOAT
  131               | DOUBLE
  132               | SIGNED
  133               | UNSIGNED
  134               | BOOL
  135               | struct_or_union_specifier
  136               | enum_specifier
  137               | TYPE_NAME

  138 struct_or_union_specifier: STRUCT IDENTIFIER
  139                          | UNION IDENTIFIER
  140                          | STRUCT IDENTIFIER '{' struct_declaration_list '}'
  141                          | UNION IDENTIFIER '{' struct_declaration_list '}'
  142                          | STRUCT '{' struct_declaration_list '}'
  143                          | UNION '{' struct_declaration_list '}'

  144 struct_declaration_list: struct_declaration
  145                        | struct_declaration_list struct_declaration

  146 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  147 specifier_qualifier_list: type_specifier
  148                         | type_specifier specifier_qualifier_list
  149                         | type_qualifier
  150                         | type_qualifier specifier_qualifier_list

  151 struct_declarator_list: declarator
  152                       | struct_declarator_list ',' declarator

  153 enum_specifier: ENUM IDENTIFIER
  154               | ENUM '{' enumerator_list '}'
  155               | ENUM IDENTIFIER '{' enumerator_list '}'

  156 enumerator_list: enumerator
  157                | enumerator_list ',' enumerator

  158 enumerator: IDENTIFIER
  159           | IDENTIFIER '=' constant_expression

  160 type_qualifier: CONST
  161               | VOLATILE

  162 declarator: pointer direct_declarator
  163           | direct_declarator

  164 direct_declarator: IDENTIFIER
  165                  | '(' declarator ')'
  166                  | direct_declarator '[' ']'
  167                  | direct_declarator '[' constant_expression ']'
  168                  | direct_declarator '(' parameter_type_list ')'
  169                  | direct_declarator '(' identifier_list ')'
  170                  | direct_declarator '(' ')'

  171 pointer: '*'
  172        | '*' type_qualifier_list
  173        | '*' pointer
  174        | '*' type_qualifier_list pointer

  175 type_qualifier_list: type_qualifier
  176                    | type_qualifier_list type_qualifier

  177 parameter_type_list: parameter_list
  178                    | parameter_list ',' ELLIPSIS

  179 parameter_list: parameter_declaration
  180               | parameter_list ',' parameter_declaration

  181 parameter_declaration: declaration_specifiers declarator
  182                      | declaration_specifiers abstract_declarator
  183                      | declaration_specifiers

  184 identifier_list: IDENTIFIER
  185                | identifier_list ',' IDENTIFIER

  186 type_name: specifier_qualifier_list
  187          | specifier_qualifier_list abstract_declarator

  188 abstract_declarator: pointer
  189                    | direct_abstract_declarator
  190                    | pointer direct_abstract_declarator

  191 direct_abstract_declarator: '(' abstract_declarator ')'
  192                           | '[' ']'
  193                           | '[' constant_expression ']'
  194                           | direct_abstract_declarator '[' ']'
  195                           | direct_abstract_declarator '[' constant_expression ']'
  196                           | '(' ')'
  197                           | '(' parameter_type_list ')'
  198                           | direct_abstract_declarator '(' ')'
  199                           | direct_abstract_declarator '(' parameter_type_list ')'

  200 init_declarator_list: init_declarator
  201                     | init_declarator_list ',' init_declarator

  202 init_declarator: declarator
  203                | declarator '=' initializer

  204 initializer: assignment_expression
  205            | '{' initializer_list '}'
  206            | '{' initializer_list ',' '}'

  207 initializer_list: initializer
  208                 | initializer_list ',' initializer

  209 statement: labeled_statement
  210          | compound_statement
  211          | expression_statement
  212          | selection_statement
  213          | iteration_statement
  214          | jump_statement
  215          | try_catch_statement

  216 labeled_statement: IDENTIFIER ':' statement
  217                  | CASE constant_expression ':' statement
  218                  | DEFAULT ':' statement

  219 compound_statement: '{' '}'
  220                   | '{' block_item_list '}'

  221 block_item_list: block_item
  222                | block_item_list block_item

  223 block_item: declaration
  224           | statement

  225 expression_statement: ';'
  226                     | expression ';'

  227 selection_statement: IF '(' expression ')' statement
  228                    | IF '(' expression ')' statement ELSE statement
  229                    | SWITCH '(' expression ')' statement

  230 iteration_statement: WHILE '(' expression ')' statement
  231                    | DO statement WHILE '(' expression ')' ';'
  232                    | FOR '(' for_expr ';' for_expr ';' for_expr ')' statement

  233 for_expr: /* empty */
  234         | expression

  235 jump_statement: GOTO IDENTIFIER ';'
  236               | CONTINUE ';'
  237               | BREAK ';'
  238               | RETURN ';'
  239               | RETURN expression ';'

  240 declaration_list: declaration
  241                 | declaration_list declaration

  242 try_catch_statement: TRY compound_statement CATCH '(' parameter_declaration ')' compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 32
'#' (35) 103 104
'%' (37) 38
'&' (38) 27 54
'(' (40) 4 9 10 24 34 96 97 98 165 168 169 170 191 196 197 198 199
    227 228 229 230 231 232 242
')' (41) 4 9 10 24 34 96 97 98 165 168 169 170 191 196 197 198 199
    227 228 229 230 231 232 242
'*' (42) 28 36 171 172 173 174
'+' (43) 29 40
',' (44) 18 79 152 157 178 180 185 201 206 208
'-' (45) 30 41
'.' (46) 11
'/' (47) 37
':' (58) 64 84 92 216 217 218
';' (59) 102 112 113 146 225 226 231 232 235 236 237 238 239
'<' (60) 46 104
'=' (61) 67 159 203
'>' (62) 47 104
'?' (63) 64
'[' (91) 8 166 167 192 193 194 195
']' (93) 8 166 167 192 193 194 195
'^' (94) 56
'{' (123) 81 101 140 141 142 143 154 155 205 206 219 220
'|' (124) 58
'}' (125) 81 101 140 141 142 143 154 155 205 206 219 220
'~' (126) 31 98
error (256)
AUTO (258) 123
BREAK (259) 237
CASE (260) 217
CHAR (261) 126
CONST (262) 160
CONTINUE (263) 236
DEFAULT (264) 218
DO (265) 231
DOUBLE (266) 131
ELSE (267) 228
ENUM (268) 153 154 155
EXTERN (269) 121
FLOAT (270) 130
FOR (271) 232
GOTO (272) 235
IF (273) 227 228
INT (274) 128
LONG (275) 129
REGISTER (276) 124
RETURN (277) 238 239
SHORT (278) 127
SIGNED (279) 132
SIZEOF (280) 23 24
STATIC (281) 122
STRUCT (282) 138 140 142
SWITCH (283) 229
TYPEDEF (284) 120
UNION (285) 139 141 143
UNSIGNED (286) 133
VOID (287) 125
VOLATILE (288) 161
WHILE (289) 230 231
CATCH (290) 242
CLASS (291) 82 83
DELETE (292) 26
FRIEND (293)
INLINE (294)
NAMESPACE (295) 101 102
NEW (296) 25
PRIVATE (297) 86
PROTECTED (298) 87
PUBLIC (299) 85
TEMPLATE (300)
THIS (301) 6
THROW (302)
TRY (303) 242
USING (304) 102
VIRTUAL (305)
BOOL (306) 134
BOOL_LITERAL (307) 5
SCOPE_OP (308) 15
IDENTIFIER (309) 1 11 12 15 82 83 84 96 97 98 101 102 103 104 138 139
    140 141 153 155 158 159 164 184 185 216 235
CONSTANT (310) 2
STRING_LITERAL (311) 3 103
ELLIPSIS (312) 178
PTR_OP (313) 12
INC_OP (314) 13 20
DEC_OP (315) 14 21
LEFT_OP (316) 16 43
RIGHT_OP (317) 44
LE_OP (318) 48
GE_OP (319) 49
EQ_OP (320) 51
NE_OP (321) 52
AND_OP (322) 60
OR_OP (323) 62
MUL_ASSIGN (324) 68
DIV_ASSIGN (325) 69
MOD_ASSIGN (326) 70
ADD_ASSIGN (327) 71
SUB_ASSIGN (328) 72
LEFT_ASSIGN (329) 73
RIGHT_ASSIGN (330) 74
AND_ASSIGN (331) 75
XOR_ASSIGN (332) 76
OR_ASSIGN (333) 77
TYPE_NAME (334) 137
LOWER_THAN_ELSE (335)


Nonterminals, with rules where they appear

$accept (106)
    on left: 0
primary_expression (107)
    on left: 1 2 3 4 5 6, on right: 7 16
postfix_expression (108)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 8 9 10 11 12 13
    14 16 19
argument_expression_list (109)
    on left: 17 18, on right: 10 18
unary_expression (110)
    on left: 19 20 21 22 23 24 25 26, on right: 20 21 23 33 66
unary_operator (111)
    on left: 27 28 29 30 31 32, on right: 22
cast_expression (112)
    on left: 33 34, on right: 22 25 26 34 35 36 37 38
multiplicative_expression (113)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (114)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (115)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (116)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (117)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (118)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (119)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (120)
    on left: 57 58, on right: 58 59 60
logical_and_expression (121)
    on left: 59 60, on right: 60 61 62
logical_or_expression (122)
    on left: 61 62, on right: 62 63 64
conditional_expression (123)
    on left: 63 64, on right: 64 65 80
assignment_expression (124)
    on left: 65 66, on right: 17 18 66 78 79 204
assignment_operator (125)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
expression (126)
    on left: 78 79, on right: 4 8 64 79 226 227 228 229 230 231 234
    239
constant_expression (127)
    on left: 80, on right: 159 167 193 195 217
class_definition (128)
    on left: 81, on right: 107
class_head (129)
    on left: 82 83, on right: 81
base_clause (130)
    on left: 84, on right: 83
access_specifier (131)
    on left: 85 86 87, on right: 84 92
class_body (132)
    on left: 88 89, on right: 81
member_list (133)
    on left: 90 91, on right: 88 91
member_declaration (134)
    on left: 92 93 94 95, on right: 90 91
constructor_definition (135)
    on left: 96 97, on right: 94
destructor_definition (136)
    on left: 98, on right: 95
translation_unit (137)
    on left: 99 100 101 102 103 104, on right: 0 100 101
external_declaration (138)
    on left: 105 106 107, on right: 99 100
function_definition (139)
    on left: 108 109 110 111, on right: 105
declaration (140)
    on left: 112 113, on right: 93 106 223 240 241
declaration_specifiers (141)
    on left: 114 115 116 117 118 119, on right: 108 109 112 113 115
    117 119 181 182 183
storage_class_specifier (142)
    on left: 120 121 122 123 124, on right: 114 115
type_specifier (143)
    on left: 125 126 127 128 129 130 131 132 133 134 135 136 137, on right:
    116 117 147 148
struct_or_union_specifier (144)
    on left: 138 139 140 141 142 143, on right: 135
struct_declaration_list (145)
    on left: 144 145, on right: 140 141 142 143 145
struct_declaration (146)
    on left: 146, on right: 144 145
specifier_qualifier_list (147)
    on left: 147 148 149 150, on right: 146 148 150 186 187
struct_declarator_list (148)
    on left: 151 152, on right: 146 152
enum_specifier (149)
    on left: 153 154 155, on right: 136
enumerator_list (150)
    on left: 156 157, on right: 154 155 157
enumerator (151)
    on left: 158 159, on right: 156 157
type_qualifier (152)
    on left: 160 161, on right: 118 119 149 150 175 176
declarator (153)
    on left: 162 163, on right: 108 109 110 111 151 152 165 181 202
    203
direct_declarator (154)
    on left: 164 165 166 167 168 169 170, on right: 162 163 166 167
    168 169 170
pointer (155)
    on left: 171 172 173 174, on right: 162 173 174 188 190
type_qualifier_list (156)
    on left: 175 176, on right: 172 174 176
parameter_type_list (157)
    on left: 177 178, on right: 168 197 199
parameter_list (158)
    on left: 179 180, on right: 96 177 178 180
parameter_declaration (159)
    on left: 181 182 183, on right: 179 180 242
identifier_list (160)
    on left: 184 185, on right: 169 185
type_name (161)
    on left: 186 187, on right: 24 34
abstract_declarator (162)
    on left: 188 189 190, on right: 182 187 191
direct_abstract_declarator (163)
    on left: 191 192 193 194 195 196 197 198 199, on right: 189 190
    194 195 198 199
init_declarator_list (164)
    on left: 200 201, on right: 113 201
init_declarator (165)
    on left: 202 203, on right: 200 201
initializer (166)
    on left: 204 205 206, on right: 203 207 208
initializer_list (167)
    on left: 207 208, on right: 205 206 208
statement (168)
    on left: 209 210 211 212 213 214 215, on right: 216 217 218 224
    227 228 229 230 231 232
labeled_statement (169)
    on left: 216 217 218, on right: 209
compound_statement (170)
    on left: 219 220, on right: 96 97 98 108 109 110 111 210 242
block_item_list (171)
    on left: 221 222, on right: 220 222
block_item (172)
    on left: 223 224, on right: 221 222
expression_statement (173)
    on left: 225 226, on right: 211
selection_statement (174)
    on left: 227 228 229, on right: 212
iteration_statement (175)
    on left: 230 231 232, on right: 213
for_expr (176)
    on left: 233 234, on right: 232
jump_statement (177)
    on left: 235 236 237 238 239, on right: 214
declaration_list (178)
    on left: 240 241, on right: 108 110 241
try_catch_statement (179)
    on left: 242, on right: 215


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    REGISTER    shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    STRUCT      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNION       shift, and go to state 16
    UNSIGNED    shift, and go to state 17
    VOID        shift, and go to state 18
    VOLATILE    shift, and go to state 19
    CLASS       shift, and go to state 20
    NAMESPACE   shift, and go to state 21
    USING       shift, and go to state 22
    BOOL        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    TYPE_NAME   shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27
    '#'         shift, and go to state 28

    class_definition           go to state 29
    class_head                 go to state 30
    translation_unit           go to state 31
    external_declaration       go to state 32
    function_definition        go to state 33
    declaration                go to state 34
    declaration_specifiers     go to state 35
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40
    declarator                 go to state 41
    direct_declarator          go to state 42
    pointer                    go to state 43


State 1

  123 storage_class_specifier: AUTO .

    $default  reduce using rule 123 (storage_class_specifier)


State 2

  126 type_specifier: CHAR .

    $default  reduce using rule 126 (type_specifier)


State 3

  160 type_qualifier: CONST .

    $default  reduce using rule 160 (type_qualifier)


State 4

  131 type_specifier: DOUBLE .

    $default  reduce using rule 131 (type_specifier)


State 5

  153 enum_specifier: ENUM . IDENTIFIER
  154               | ENUM . '{' enumerator_list '}'
  155               | ENUM . IDENTIFIER '{' enumerator_list '}'

    IDENTIFIER  shift, and go to state 44
    '{'         shift, and go to state 45


State 6

  121 storage_class_specifier: EXTERN .

    $default  reduce using rule 121 (storage_class_specifier)


State 7

  130 type_specifier: FLOAT .

    $default  reduce using rule 130 (type_specifier)


State 8

  128 type_specifier: INT .

    $default  reduce using rule 128 (type_specifier)


State 9

  129 type_specifier: LONG .

    $default  reduce using rule 129 (type_specifier)


State 10

  124 storage_class_specifier: REGISTER .

    $default  reduce using rule 124 (storage_class_specifier)


State 11

  127 type_specifier: SHORT .

    $default  reduce using rule 127 (type_specifier)


State 12

  132 type_specifier: SIGNED .

    $default  reduce using rule 132 (type_specifier)


State 13

  122 storage_class_specifier: STATIC .

    $default  reduce using rule 122 (storage_class_specifier)


State 14

  138 struct_or_union_specifier: STRUCT . IDENTIFIER
  140                          | STRUCT . IDENTIFIER '{' struct_declaration_list '}'
  142                          | STRUCT . '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 15

  120 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 120 (storage_class_specifier)


State 16

  139 struct_or_union_specifier: UNION . IDENTIFIER
  141                          | UNION . IDENTIFIER '{' struct_declaration_list '}'
  143                          | UNION . '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 48
    '{'         shift, and go to state 49


State 17

  133 type_specifier: UNSIGNED .

    $default  reduce using rule 133 (type_specifier)


State 18

  125 type_specifier: VOID .

    $default  reduce using rule 125 (type_specifier)


State 19

  161 type_qualifier: VOLATILE .

    $default  reduce using rule 161 (type_qualifier)


State 20

   82 class_head: CLASS . IDENTIFIER
   83           | CLASS . IDENTIFIER base_clause

    IDENTIFIER  shift, and go to state 50


State 21

  101 translation_unit: NAMESPACE . IDENTIFIER '{' translation_unit '}'

    IDENTIFIER  shift, and go to state 51


State 22

  102 translation_unit: USING . NAMESPACE IDENTIFIER ';'

    NAMESPACE  shift, and go to state 52


State 23

  134 type_specifier: BOOL .

    $default  reduce using rule 134 (type_specifier)


State 24

  164 direct_declarator: IDENTIFIER .

    $default  reduce using rule 164 (direct_declarator)


State 25

  137 type_specifier: TYPE_NAME .

    $default  reduce using rule 137 (type_specifier)


State 26

  171 pointer: '*' .
  172        | '*' . type_qualifier_list
  173        | '*' . pointer
  174        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    '*'       shift, and go to state 26

    $default  reduce using rule 171 (pointer)

    type_qualifier       go to state 53
    pointer              go to state 54
    type_qualifier_list  go to state 55


State 27

  165 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 24
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    declarator         go to state 56
    direct_declarator  go to state 42
    pointer            go to state 43


State 28

  103 translation_unit: '#' . IDENTIFIER STRING_LITERAL
  104                 | '#' . IDENTIFIER '<' IDENTIFIER '>'

    IDENTIFIER  shift, and go to state 57


State 29

  107 external_declaration: class_definition .

    $default  reduce using rule 107 (external_declaration)


State 30

   81 class_definition: class_head . '{' class_body '}'

    '{'  shift, and go to state 58


State 31

    0 $accept: translation_unit . $end
  100 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 59
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    REGISTER    shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    STRUCT      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNION       shift, and go to state 16
    UNSIGNED    shift, and go to state 17
    VOID        shift, and go to state 18
    VOLATILE    shift, and go to state 19
    CLASS       shift, and go to state 20
    BOOL        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    TYPE_NAME   shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    class_definition           go to state 29
    class_head                 go to state 30
    external_declaration       go to state 60
    function_definition        go to state 33
    declaration                go to state 34
    declaration_specifiers     go to state 35
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40
    declarator                 go to state 41
    direct_declarator          go to state 42
    pointer                    go to state 43


State 32

   99 translation_unit: external_declaration .

    $default  reduce using rule 99 (translation_unit)


State 33

  105 external_declaration: function_definition .

    $default  reduce using rule 105 (external_declaration)


State 34

  106 external_declaration: declaration .

    $default  reduce using rule 106 (external_declaration)


State 35

  108 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  109                    | declaration_specifiers . declarator compound_statement
  112 declaration: declaration_specifiers . ';'
  113            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 24
    '*'         shift, and go to state 26
    '('         shift, and go to state 27
    ';'         shift, and go to state 61

    declarator            go to state 62
    direct_declarator     go to state 42
    pointer               go to state 43
    init_declarator_list  go to state 63
    init_declarator       go to state 64


State 36

  114 declaration_specifiers: storage_class_specifier .
  115                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25

    $default  reduce using rule 114 (declaration_specifiers)

    declaration_specifiers     go to state 65
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40


State 37

  116 declaration_specifiers: type_specifier .
  117                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25

    $default  reduce using rule 116 (declaration_specifiers)

    declaration_specifiers     go to state 66
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40


State 38

  135 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 135 (type_specifier)


State 39

  136 type_specifier: enum_specifier .

    $default  reduce using rule 136 (type_specifier)


State 40

  118 declaration_specifiers: type_qualifier .
  119                       | type_qualifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25

    $default  reduce using rule 118 (declaration_specifiers)

    declaration_specifiers     go to state 67
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40


State 41

  110 function_definition: declarator . declaration_list compound_statement
  111                    | declarator . compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25
    '{'        shift, and go to state 68

    declaration                go to state 69
    declaration_specifiers     go to state 70
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40
    compound_statement         go to state 71
    declaration_list           go to state 72


State 42

  163 declarator: direct_declarator .
  166 direct_declarator: direct_declarator . '[' ']'
  167                  | direct_declarator . '[' constant_expression ']'
  168                  | direct_declarator . '(' parameter_type_list ')'
  169                  | direct_declarator . '(' identifier_list ')'
  170                  | direct_declarator . '(' ')'

    '('  shift, and go to state 73
    '['  shift, and go to state 74

    $default  reduce using rule 163 (declarator)


State 43

  162 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 24
    '('         shift, and go to state 27

    direct_declarator  go to state 75


State 44

  153 enum_specifier: ENUM IDENTIFIER .
  155               | ENUM IDENTIFIER . '{' enumerator_list '}'

    '{'  shift, and go to state 76

    $default  reduce using rule 153 (enum_specifier)


State 45

  154 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 77

    enumerator_list  go to state 78
    enumerator       go to state 79


State 46

  138 struct_or_union_specifier: STRUCT IDENTIFIER .
  140                          | STRUCT IDENTIFIER . '{' struct_declaration_list '}'

    '{'  shift, and go to state 80

    $default  reduce using rule 138 (struct_or_union_specifier)


State 47

  142 struct_or_union_specifier: STRUCT '{' . struct_declaration_list '}'

    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STRUCT     shift, and go to state 14
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25
